--- a/src/styles/product/sidebar.module.css
+++ b/src/styles/product/sidebar.module.css
@@ -26,4 +26,11 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    padding-left: 2rem;
+}
+.barmenu div{
+   font-size: 1rem;
+   font-family: bold;
+   padding: 0.2rem;
+   cursor: pointer;
 }
