--- a/src/styles/product/productCategory.module.css
+++ b/src/styles/product/productCategory.module.css
@@ -6,3 +6,15 @@
     display: flex;
     justify-content: space-around;
 }
+
+@media only screen and (max-width: 400px) {
+    .box{
+        width: 100%;
+    }
+}
+@media only screen and (max-width: 600px) {
+}
+@media only screen and (max-width: 800px) {
+}
+@media only screen and (max-width: 1000px) {
+}
