--- a/src/styles/home/home.module.css
+++ b/src/styles/home/home.module.css
@@ -110,3 +110,15 @@ a {
     width: 50%;
   }
 }
+
+@media only screen and (max-width: 400px) {
+    
+}
+@media only screen and (max-width: 600px) {
+}
+@media only screen and (max-width: 800px) {
+  
+}
+@media only screen and (max-width: 1000px) {
+  
+}
