--- a/src/styles/product/buynow.module.css
+++ b/src/styles/product/buynow.module.css
@@ -34,3 +34,12 @@
   justify-content: space-around;
   border: 1px solid black;
 }
+@media only screen and (max-width: 400px) {
+
+}
+@media only screen and (max-width: 600px) {
+}
+@media only screen and (max-width: 800px) {
+}
+@media only screen and (max-width: 1000px) {
+}
