--- a/src/styles/product/cart.module.css
+++ b/src/styles/product/cart.module.css
@@ -79,3 +79,12 @@
   color: rgb(235, 232, 232);
   background-color: rgb(172, 168, 168);
 }
+@media only screen and (max-width: 400px) {
+
+}
+@media only screen and (max-width: 600px) {
+}
+@media only screen and (max-width: 800px) {
+}
+@media only screen and (max-width: 1000px) {
+}
