--- a/src/styles/product/details.module.css
+++ b/src/styles/product/details.module.css
@@ -32,3 +32,12 @@
 .detailspro{
     width: 40%;
 }
+@media only screen and (max-width: 400px) {
+
+}
+@media only screen and (max-width: 600px) {
+}
+@media only screen and (max-width: 800px) {
+}
+@media only screen and (max-width: 1000px) {
+}
