--- a/src/styles/product/sidebar.module.css
+++ b/src/styles/product/sidebar.module.css
@@ -34,3 +34,15 @@
    padding: 0.2rem;
    cursor: pointer;
 }
+
+@media only screen and (max-width: 400px) {
+    .container{
+        display: none;
+    }
+}
+@media only screen and (max-width: 600px) {
+}
+@media only screen and (max-width: 800px) {
+}
+@media only screen and (max-width: 1000px) {
+}
