--- a/src/styles/home/navbar.module.css
+++ b/src/styles/home/navbar.module.css
@@ -1,5 +1,20 @@
 
+
+.container{
+  border: 2px solid red;
+}
+
+
+.popup {
+  display: none;
+}
 @media only screen and (max-width: 400px) {
+  .manuSec {
+    display: none;
+  }
+  .popup {
+    display: flex;
+  }
 }
 @media only screen and (max-width: 600px) {
 }
